Refactor integration tests for classified ads